@@ -22,7 +22,6 @@ import static org.apiguardian.api.API.Status.INTERNAL;
 import static org.apiguardian.api.API.Status.STABLE;
 
 import java.util.Arrays;
-import java.util.stream.Collectors;
 
 import org.apiguardian.api.API;
 import org.jetbrains.annotations.Nullable;
@@ -85,14 +84,14 @@ public final class Subquery implements Clause {
 						return i.asExpression();
 					}
 				})
-				.collect(Collectors.toList()));
+				.toList());
 
 			optionalImports = returnItems.isEmpty() ? null : new With(false, returnItems, null, null, null, null);
 
 			returnItems = new ExpressionList(Arrays.stream(imports)
 				.filter(AliasedExpression.class::isInstance)
-				.map(AliasedExpression.class::cast)
-				.collect(Collectors.toList()));
+				.map(Expression.class::cast)
+				.toList());
 
 			optionalRenames = returnItems.isEmpty() ? null : new With(false, returnItems, null, null, null, null);
 		}
